# dx-bridge-eth-rs

./: Cargo.toml  README.md
bridged-tokens-wrapper/: Cargo.toml
bridged-tokens-wrapper/mandos/: add_wrapped_token.scen.json  blacklist_token.scen.json  remove_wrapped_token.scen.json  setup.scen.json  unwrap_token.scen.json  whitelist_token.scen.json  wrap_token.scen.json
bridged-tokens-wrapper/meta/: Cargo.toml
bridged-tokens-wrapper/meta/src/: main.rs
bridged-tokens-wrapper/src/: dfp_big_uint.rs  lib.rs
bridged-tokens-wrapper/tests/: dfp_big_uint_test.rs  scenario_go_test.rs
bridged-tokens-wrapper/wasm/: Cargo.toml
bridged-tokens-wrapper/wasm/src/: lib.rs
dct-safe/: Cargo.toml
docs/: gas_costs.md  relayer.md  setup.md
multi-transfer-dct/: Cargo.toml  README.md
multisig/: Cargo.toml  README.md
multisig/interaction/config/: configs.cfg  issue-tokens-snippets.sh  menu_functions.cfg  multisig-snippets.sh  multitransfer-snippets.sh  safe-snippets.sh  upgrade-snippets.sh  wrapped-snippets.sh
multisig/mandos/: change_token_config.scen.json  create_dharitri_to_ethereum_tx_batch.scen.json  ethereum_to_dharitri_tx_batch_ok.scen.json  ethereum_to_dharitri_tx_batch_rejected.scen.json  execute_dharitri_to_ethereum_tx_batch.scen.json  reject_dharitri_to_ethereum_tx_batch.scen.json  setup.scen.json  unstake.scen.json
multisig/meta/: Cargo.toml
multisig/src/: action.rs  lib.rs  multisig_general.rs  queries.rs  setup.rs  storage.rs  user_role.rs  util.rs
multisig/tests/: scenario_go_test.rs
multisig/wasm/: Cargo.toml
multisig/wasm/src/: lib.rs
(+53 files in other folders)
